[project]
name = "rec-sys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
     "altair>=4.2.2",
     "catboost==1.2",
     "hopsworks[python]>=4.1.2",
     "huggingface-hub==0.24.7",
     "ipykernel>=6.29.5",
     "langchain-openai==0.1.14",
     "langchain==0.2.6",
     "loguru>=0.7.2",
     "nbformat>=5.10.4",
     "polars==1.9.0",
     "pydantic-settings>=2.6.1",
     "raw-data",
     "ruff>=0.12.2",
     "sentence-transformers==2.2.2",
     "streamlit==1.28.2",
     "tensorflow-recommenders==0.7.2",
     "tensorflow==2.14",
]

[tool.uv.workspace]
members = [
    "recsys/raw_data",
    "recsys/features",
]

[tool.uv.sources]
raw-data = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]

[tool.ruff]
line-length = 88
lint.select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
lint.ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"